--- a/_config.yml
+++ b/_config.yml
@@ -67,4 +67,7 @@ theme: landscape
 # Deployment
 ## Docs: http://hexo.io/docs/deployment.html
 deploy:
-  type:
+  type: git
+  repo: git@github.com:watilde/blog.git
+  branch: gh-pages
+  message: Site updated: {{ now("YYYY-MM-DD HH:mm:ss") }}
