--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ timezone:
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://watilde.github.io
+url: http://watilde.github.io/blog
 root: /blog/
 permalink: :year/:month/:day/:title/
 permalink_defaults:
@@ -70,4 +70,3 @@ deploy:
   type: git
   repo: git@github.com:watilde/blog.git
   branch: gh-pages
-  message: Site updated: {{ now("YYYY-MM-DD HH:mm:ss") }}
