--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
     "start": "hexo server",
     "generate": "hexo generate",
     "deploy": "hexo deploy",
-    "postdeploy": "git commit -am 'npm run deploy' && git push origin master"
+    "postdeploy": "git add . && git commit -am 'npm run deploy' && git push origin master"
   },
   "dependencies": {
     "hexo": "^3.0.0",
     "hexo-deployer-git": "0.0.4",
     "hexo-generator-archive": "^0.1.0",
     "hexo-generator-category": "^0.1.0",
+    "hexo-generator-feed": "^1.0.1",
     "hexo-generator-index": "^0.1.0",
     "hexo-generator-tag": "^0.1.0",
     "hexo-renderer-ejs": "^0.1.0",
