--- a/themes/landscape/_config.yml
+++ b/themes/landscape/_config.yml
@@ -1,8 +1,8 @@
 # Header
 menu:
-  Home: /
-  Archives: /archives
-rss: /atom.xml
+  Home: /blog
+  Archives: /blog/archives
+rss: /blog/atom.xml
 
 # Content
 excerpt_link: Read More
@@ -19,7 +19,7 @@ widgets:
 
 # Miscellaneous
 google_analytics:
-favicon: /favicon.png
+favicon: /blog/favicon.png
 twitter:
 google_plus:
 fb_admins:
