--- a/themes/landscape/_config.yml
+++ b/themes/landscape/_config.yml
@@ -20,7 +20,7 @@ widgets:
 # Miscellaneous
 google_analytics:
 favicon: /blog/favicon.png
-twitter:
+twitter: watilde
 google_plus:
 fb_admins:
 fb_app_id:
