--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "hexo-deployer-git": "0.0.4",
     "hexo-generator-archive": "^0.1.0",
     "hexo-generator-category": "^0.1.0",
+    "hexo-generator-cname": "^0.3.0",
     "hexo-generator-feed": "^1.0.1",
     "hexo-generator-index": "^0.1.0",
     "hexo-generator-tag": "^0.1.0",
